[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/droplet.png" type="Texture" id=2]
[ext_resource path="res://Assets/dash_trail_drop.png" type="Texture" id=3]
[ext_resource path="res://animations/drop_walk.tres" type="Animation" id=4]
[ext_resource path="res://animations/drop_stop_walk.tres" type="Animation" id=5]
[ext_resource path="res://animations/idle_drop.tres" type="Animation" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.592593, 1 )
colors = PoolColorArray( 0.25098, 0.521569, 0.760784, 0.439216, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_rotate_y = true
flag_disable_z = true
gravity = Vector3( -50, 0, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.90853
height = 2.88891

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 15
frame = 2

[node name="Particles2D" type="Particles2D" parent="Sprite"]
emitting = false
amount = 10
lifetime = 0.25
preprocess = 0.5
speed_scale = 1.5
fract_delta = false
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/drop_start_walk = ExtResource( 4 )
anims/drop_stop_walk = ExtResource( 5 )
anims/drop_walk = ExtResource( 4 )
anims/idle = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 15.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.14

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_DashCooldownTimer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_WallJumpTimer_timeout"]
